# bad-net-interchange

./: .gitignore  compare_igm_vs_cgma.py  comparison_logic_notes.md  comparison_result.csv  comparison_result.md  readme.md
cgma-igm-comparison-ui-app/: Dockerfile  README.md  build.sh
cgma-igm-comparison-ui-app/backend/: .env.example  Cargo.toml
cgma-igm-comparison-ui-app/backend/src/: cgma_client.rs  cgma_parser.rs  config.rs  file_loader.rs  graph_store.rs  igm_client.rs  igm_parser.rs  lib.rs  main.rs  query.rs  retry.rs
cgma-igm-comparison-ui-app/backend/tests/: integration_test.rs
cgma-igm-comparison-ui-app/backend/tests/fixtures/: ssh_example.xml
cgma-igm-comparison-ui-app/frontend/: package-lock.json  package.json  svelte.config.js  vite.config.ts
cgma-igm-comparison-ui-app/frontend/src/: app.css  app.html
cgma-igm-comparison-ui-app/python-backend/: .env  .env.example  requirements.txt
cgma-igm-comparison-ui-app/python-backend/app/: cgma_client.py  cgma_parser.py  config.py  file_loader.py  graph_store.py  igm_client.py  igm_fast_parser.py  igm_parser.py  main.py  query.py
cgma-igm-comparison-ui-app/python-backend/tests/: test_api.py  test_availability_endpoint.py  test_availability_gate.py  test_cache_clear.py  test_cgma_parser.py  test_file_loader.py  test_graph_store.py  test_query.py  (+4 more)
docs/: app.js  index.html  styles.css
docs/pkg/: rust_wasm.d.ts  rust_wasm.js  rust_wasm_bg.wasm  rust_wasm_bg.wasm.d.ts
plan/: cgmes_cgma_comparison_plan.md
src/: build_wasm_webapp.sh
src/rust-wasm/: Cargo.toml
src/web/: app.js  index.html  styles.css
(+24 files in other folders)
