[package]
name = "cgma-igm-backend"
edition = "2024"
version = "0.1.0"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.13", features = ["json", "query"] }
oxigraph = { version = "0.5", default-features = false }
quick-xml = { version = "0.37", features = ["serialize"] }
zip = "2"
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = "0.3"
tower-http = { version = "0.6", features = ["cors", "fs"] }
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }
